--- a/projects/COVID-19/index.html
+++ b/projects/COVID-19/index.html
@@ -166,6 +166,7 @@
   </div>
 </div>
 
+
 <div id="wrapper" class="wrapper">     
   
 
@@ -366,15 +367,19 @@
         
       </div>
       
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-XB5JRHR9GW"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-XB5JRHR9GW', { 'anonymize_ip': true }); </script>
+
     </div>
   </div>
 </div>
+
 
 
 <script type="text/javascript" src="/assets/js/scripts.js"></script>
 
 <script type="text/javascript" src="/assets/js/hamburger.js"></script>
 <script type="text/javascript" src="/assets/js/darkModeSwitch.js"></script>
+
 
 
 
